# wg-config

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: common.rs  error.rs  fileworks.rs  keys.rs  lib.rs  wg_client_conf.rs  wg_conf.rs  wg_interface.rs  wg_peer.rs
