[package]
name = "wg-config"
description = "WireGuard config management"
version = "0.0.2"
edition = "2021"
authors = ["shurikeagle <alexander.orlov22@gmail.com>"]
repository = "https://github.com/shurikeagle/wg-config.git"
documentation = "https://docs.rs/wg-config"
license = "MIT"
keywords = ["wireguard", "wg", "config", "vpn", "management"]

[dependencies]
base64 = "0.22.1"
ipnetwork = "0.20.0"

[features]
default = ["wg_engine"]
wg_engine = []
